# qdatamatrix

./: CMakeLists.txt  INSTALL  README  build_installer.bat  build_mingw32  libdmtx.lib  main.cpp  mainwindow.cpp  mainwindow.h  qdatamatrix.pro  qdatamatrix.rc.in
data/: qdatamatrix.qrc
forms/: about.ui  mainwindow.ui
src/: main.cpp  mainwindow.cpp  mainwindow.h
